--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_app_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:fullBackupContent="projetdrone_backup.xml">
+        android:theme="@style/AppTheme">
         <activity android:name=".SplashScreenActivity"
             android:theme="@style/AppTheme2">
             <intent-filter>
